lab2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: routing
spec:
  rules:
    - http:
        paths:
          - path: /api/profiles
            pathType: Prefix
            backend:
              service:
                name: profile-service
                port:
                  number: 8080
          - path: /api/posts
            pathType: Prefix
            backend:
              service:
                name: post-service
                port:
                  number: 8000
          - path: /api/fake-posts
            pathType: Prefix
            backend:
              service:
                name: fake-post-service
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
